--- a/main/themes/tella/layouts/shortcodes/form.html
+++ b/main/themes/tella/layouts/shortcodes/form.html
@@ -1,9 +1,9 @@
-<form name="contact" action="https://getform.io/f/contact-tinkerlab" method="POST">
+<form name="contact" data-netlify="true" method="POST">
     <div class="input">
         <input type="text" placeholder="Name" name="name" class="p-4 bg-gray-200 border border-gray-200 focus:outline-none focus:bg-white focus:border-gray-500" required>
     </div>
     <div class="input">
-        <input type="text" placeholder="Email" name="mail" class="p-4 bg-gray-200 border border-gray-200 focus:outline-none focus:bg-white focus:border-gray-500" required>
+        <input type="email" placeholder="Email" name="email" class="p-4 bg-gray-200 border border-gray-200 focus:outline-none focus:bg-white focus:border-gray-500" required>
     </div>
     <div class="input">
         <input type="text" placeholder="Title" name="title" class="p-4 bg-gray-200 border border-gray-200 focus:outline-none focus:bg-white focus:border-gray-500" required>
